# coihuin-compress

./: .gitignore  AGENTS.md  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  README.md  STATUS.md  pyproject.toml  summary.md  sync-check.sh
.claude/: settings.json
.claude/agents/: cspec-implementer.md
.claude/commands/: eval-checkpoint.md  sync-issues.md
.claude/hooks/: stop-checkpoint.py
checkpoints/active/: INDEX.md  chk-checkpoint-branches-plan.md  chk-dialectic-audit.md  chk-issue-backlog.md  chk-stop-hook-auto-checkpoint.md  chk-unified-command.md
checkpoints/archive/: .archive-marker  INDEX.md  chk-checkpoint-branches-plan.md  chk-issue-backlog.md  chk-unified-command.md  chk-v170-cli-commands.md
chkcc/: archive.py  cli.py  current.py  doctor.py  init.py  pyproject.toml  scaffold.py  stop_hook.py  tree.py  update.py
chkcc/data/skill/: SKILL.md  checkpoint-format.md  compress-tree.py  format-check.py  index-format.md
chkcc/data/skill/examples/: checkpoint-with-delta.md
chkcc/tests/: __init__.py  test_doctor.py  test_init.py  test_prime.py
docs/examples/: chk-001.md  chk-002.md  chk-003-breadcrumbs.md  chk-003.md  chk-004.md  chk-005.md  delta-001-002.md  delta-002-003.md  delta-003-004.md  delta-004-005.md
eval/: rubric.md
history/: 2025-12-16-dialectic-audit.md  2025-12-17-cleanup-notes.md
plan/: unified-command-implementation.md
scripts/: protect-branches.sh  sync-check.sh
specs/: CONSTITUTION.md  PROJECT.yaml  checkpoint-format.md  delta-format.md
specs/issues/: DEPENDENCIES.md  ISSUE-001.md  ISSUE-002.md  ISSUE-003.md  ISSUE-004.md  (+7 more)
(+40 files in other folders)
