[project]
name = "chkcc"
version = "0.1.0"
description = "Checkpoint compress CLI for coihuin-compress"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.scripts]
chkcc = "chkcc.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chkcc"]
